--- a/src/components/body/background/background.scss
+++ b/src/components/body/background/background.scss
@@ -23,7 +23,7 @@
     //   border-bottom: 2px solid rgb(39, 186, 233);
     align-self: flex-end;
     display: flex;
-    justify-content: center;
+    // justify-content: center;
     text-align: center;
     margin: 0 auto;
     overflow: hidden;
