--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -64,7 +64,7 @@
 }
 .closeBtn:hover {
   color: #ffaf19;
-  font-weight: bold;
+  // font-weight: bold;
   text-shadow:
     2px 2px 3px #004669,
     2px 2px 5px #000000;
