Text alignment home page

--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -90,8 +90,9 @@
 
     .titleText {
       color: #ffffff;
-      background-color: #000000c7;
+      // background-color: #000000c7;
       align-self: flex-end;
+      line-height: 2em;
     }
 
     .boldText {
