Connect page and visual updates

--- a/src/components/body/body.scss
+++ b/src/components/body/body.scss
@@ -36,4 +36,5 @@
   @extend .sectionHeader;
   border-bottom: 1px solid #ffffff;
   box-shadow: 0px 8px 11px -8px #000000;
+  text-shadow: 1px 1px 1px #000000;
 }
