--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -50,6 +50,10 @@
   width: 100%;
   color: #ffaf19 !important;
   font-weight: bold;
+  text-shadow: 1px 1px 1px #000000;
+  border-bottom: 1px solid #ffffff;
+  box-shadow: 0px 8px 11px -8px #000000;
+  line-height: 150%;
 }
 .titleContent {
   display: flex;
