--- a/src/components/body/body.scss
+++ b/src/components/body/body.scss
@@ -1,10 +1,9 @@
-.flexContainer {
+.hmb-flexContainer {
   color: #ffffff;
   z-index: 2;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  //   height: calc(100vh - 96px);
   position: relative;
   padding: 20px;
   align-content: flex-start;
@@ -12,28 +11,28 @@
   align-items: flex-start;
 }
 
-.hbColumn {
+.hmb-column {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-.hbRow {
+.hmb-row {
   display: flex;
   flex-direction: row;
   gap: 10px;
   flex-wrap: wrap;
 }
 
-.sectionHeader {
-  color: #ffaf19;
+.hmb-sectionHeader {
+  color: var(--HMB-orange);
   text-transform: uppercase;
   font-weight: 700;
   margin-bottom: 16px;
 }
 
-.sectionHeader-Line {
-  @extend .sectionHeader;
+.hmb-sectionHeader-Line {
+  @extend .hmb-sectionHeader;
   border-bottom: 1px solid #ffffff;
   box-shadow: 0px 8px 11px -8px #000000;
   text-shadow: 1px 1px 1px #000000;
