--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -1,9 +1,9 @@
-.panels {
+.hmb-panels {
   width: 45% !important;
   margin-top: 0px !important;
 }
 
-.sectionTitle {
+.hmb-sectionTitle {
   width: 100%;
   border-bottom: 1px solid #ffffff;
   padding-left: 15px;
@@ -23,22 +23,22 @@
   }
 }
 
-.dataRows {
+.hmb-dataRows {
   display: flex;
   gap: 20px;
   flex-direction: row;
 }
 
-.aboutPanels {
-  @extend .panels;
+.hmb-aboutPanels {
+  @extend .hmb-panels;
 }
 
-.whiteText {
+.hmb-whiteText {
   -webkit-text-stroke: 0.15px #ffffff;
   letter-spacing: 1.5px;
 }
 
-#resume {
+#hmb-resume {
   .expRow {
     display: flex;
     flex-direction: row;
@@ -57,7 +57,7 @@
   }
 
   .expRole {
-    color: #ffaf19;
+    color: var(--HMB-orange);
     text-transform: uppercase;
     font-weight: 700;
     text-shadow: 1px 1px 1px #000000;
@@ -119,7 +119,7 @@
     }
 
     .boldText {
-      color: #ffaf19;
+      color: var(--HMB-orange);
       font-weight: bold;
       font-size: 1.5em;
       align-self: flex-end;
@@ -185,7 +185,7 @@
       color: #ffffffa2;
     }
     .errorInput {
-      color: #ffaf19;
+      color: var(--HMB-orange);
       font-weight: bold;
     }
   }
@@ -213,7 +213,7 @@
 }
 
 @media screen and (max-width: 610px) {
-  #resumeData {
+  #hmb-resumeData {
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
@@ -239,6 +239,9 @@
     }
   }
   .aboutPanels {
+    width: 100% !important;
+  }
+  .hmb-dataRows {
     width: 100% !important;
   }
 }
