--- a/src/App.scss
+++ b/src/App.scss
@@ -1,34 +1,35 @@
 :root {
   --HMB-orange: #ffaf19;
+  --HB-blue-background: linear-gradient(-45deg, rgb(0, 32, 48, 0.9), rgba(0, 92, 138, 0.9) 40%, rgba(0, 88, 133, 0.9) 65%, rgba(0, 32, 48, 0.9));
 }
 
 body {
+  margin-right: auto;
+  margin-left: auto;
   background-color: #000;
   width: 100vw;
   overflow: hidden;
-  margin-left: auto;
-  margin-right: auto;
   font-family: Verdana, Geneva, sans-serif;
   letter-spacing: 1px;
 }
 
 #hmb-fullContainer {
-  margin: 0 auto;
-  position: relative;
-  min-height: 633px;
-  max-width: 1782px;
-  width: 100vw;
-  align-self: flex-end;
   display: flex;
+  position: relative;
   justify-content: center;
+  align-self: flex-end;
+  margin: 0 auto;
+  width: 100vw;
+  max-width: 1782px;
+  min-height: 633px;
 }
 
 #hmb-pageContainer {
-  z-index: 2;
   position: absolute;
-  height: calc(100vh);
-  width: 100vw;
-  overflow-y: auto;
-  max-width: 1782px;
+  z-index: 2;
   padding-top: 80px;
+  width: 100vw;
+  max-width: 1782px;
+  height: calc(100vh);
+  overflow-y: auto;
 }
