--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -1,32 +1,32 @@
 .hmb-panels {
-  width: 45% !important;
   margin-top: 0px !important;
+  width: 45% !important;
 }
 
 .hmb-sectionTitle {
-  width: 100%;
   border-bottom: 1px solid #ffffff;
-  padding-left: 15px;
   padding-top: 15px;
+  padding-left: 15px;
+  width: 100%;
 
   .hmb-sectionText {
-    text-shadow: 2px 2px 5px #000000;
-    font-weight: bold;
-    color: #ffffff;
-    font-size: 1.25em;
-    background-color: #0000004a;
     box-shadow: 0px 0px 10px 6px #0000004a;
-    background-color: #005580;
     border: 1px solid #27bae9;
-    padding: 2px 4px 3px 4px;
     border-bottom: 1px solid #ffffff;
+    background-color: #0000004a;
+    background-color: #005580;
+    padding: 2px 4px 3px 4px;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 1.25em;
+    text-shadow: 2px 2px 5px #000000;
   }
 }
 
 .hmb-dataRows {
   display: flex;
-  gap: 20px;
   flex-direction: row;
+  gap: 20px;
 }
 
 .hmb-aboutPanels {
@@ -42,36 +42,32 @@
   .hmb-expRow {
     display: flex;
     flex-direction: row;
-    gap: 10px;
     flex-wrap: nowrap;
+    gap: 10px;
   }
+
   .hmb-expColumn {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    // width: 49%;
   }
-
-  // .experiencePanel {
-  //   width: 49%;
-  // }
 
   .hmb-expRole {
     color: var(--HMB-orange);
-    text-transform: uppercase;
     font-weight: 700;
     text-shadow: 1px 1px 1px #000000;
+    text-transform: uppercase;
   }
 
   .hmb-clients {
     display: flex;
     flex-flow: column;
-    padding: 10px;
     border: 1px solid rgb(255 255 255 / 34%);
     border-radius: 5px;
 
     // margin-top: 15px;
     background-color: rgb(0 0 0 / 25%);
+    padding: 10px;
 
     .hmb-nameDescription {
       flex-wrap: nowrap;
@@ -84,69 +80,64 @@
   }
 }
 
-// #experience {
-//   width: 100%;
-// }
-
 #hmb-homePage {
-  height: calc(100vh - 102px);
   padding-top: calc((100vh - 950px) / 2);
+  height: calc(100vh - 102px);
 }
 
 .hmb-homeTextStyle {
-  flex-wrap: wrap;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   margin-bottom: calc(50vh * 0.03);
 
   .hmb-titleStyle {
-    margin: 8px 0;
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
     transition: opacity 1s;
+    margin: 8px 0;
+    padding: 0 10px;
     font-size: 1.9em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    display: flex;
-    gap: 10px;
-    flex-grow: 1;
-    justify-content: center;
-    padding: 0 10px;
-    flex-wrap: wrap;
 
     .hmb-titleText {
-      color: #ffffff;
-      // background-color: #000000c7;
       align-self: flex-end;
+      color: #ffffff;
       line-height: 1em;
     }
 
     .hmb-boldText {
+      align-self: flex-end;
       color: var(--HMB-orange);
       font-weight: bold;
       font-size: 1.5em;
-      align-self: flex-end;
       line-height: 1em;
     }
   }
 }
 
 .hmb-aboutStyle {
-  transition: opacity 1s;
   display: flex;
-  width: 100%;
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px 86px;
+  transition: opacity 1s;
   padding: 10px;
+  width: 100%;
 
   .hmb-aboutContainer {
+    margin: 0px;
     border: 1px solid #ffffff70;
-    padding: 15px;
     border-radius: 5px;
+    background: var(--HB-blue-background);
+    padding: 15px;
+    max-width: 450px;
+    min-height: 100px;
     font-size: 1em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0px;
-    background: linear-gradient(-45deg, rgb(0, 32, 48, 0.75), rgba(0, 92, 138, 0.75) 40%, rgba(0, 88, 133, 0.75) 65%, rgba(0, 32, 48, 0.75));
-    min-height: 100px;
-    max-width: 450px;
 
     &--small {
       @extend .hmb-aboutContainer;
@@ -171,16 +162,18 @@
     .hmb-formLabel {
       margin-bottom: 0.5rem;
     }
+
     .hmb-formInput {
       display: block;
-      font-size: 1rem;
       border: 1px solid rgb(255 255 255 / 34%);
       border-radius: 5px;
-      padding: 10px;
       background-color: rgb(0 0 0 / 25%);
-      color: #ffffff;
+      padding: 10px;
       width: 100%;
+      color: #ffffff;
+      font-size: 1rem;
     }
+
     .hmb-formInput::placeholder {
       color: #ffffffa2;
     }
@@ -199,20 +192,12 @@
   }
 }
 
-@media screen and (max-width: 1297px) {
-  .hmb-aboutStyle {
-    .hmb-aboutContainer {
-      // Change opacity so it's visible ontop of the city
-      background: linear-gradient(-45deg, rgb(0, 32, 48, 0.9), rgba(0, 92, 138, 0.9) 40%, rgba(0, 88, 133, 0.9) 65%, rgba(0, 32, 48, 0.9)) !important;
-    }
-  }
-}
-
 @media screen and (max-width: 610px) {
   #hmb-resumeData {
-    width: 100%;
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
+
     #resBP2,
     #resBP3,
     #resBP4,
@@ -223,10 +208,12 @@
       width: 100% !important;
     }
   }
+
   #abSide {
-    width: 100%;
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
+
     #abBP2,
     #abBP3,
     #abBP4,
@@ -234,9 +221,11 @@
       width: 100% !important;
     }
   }
+
   .aboutPanels {
     width: 100% !important;
   }
+
   .hmb-dataRows {
     width: 100% !important;
   }
@@ -255,9 +244,9 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(39, 186, 233);
-  border-radius: 10px;
   border: 1px solid #000000;
+  border-radius: 10px;
+  background-color: rgb(39, 186, 233);
 }
 
 ::-webkit-scrollbar-track {
