--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -1,33 +1,30 @@
 // ===== Blue Panel
 .hmb-bluePanel {
-  color: white;
-  width: 100%;
-  min-width: 260px;
-  margin: 0 auto;
   position: relative;
-  padding: 1rem 1rem;
-  font-size: 1em;
-  line-height: 150%;
-  background: linear-gradient(-45deg, rgb(0, 32, 48, 0.97), rgba(0, 92, 138, 0.97) 40%, rgba(0, 88, 133, 0.97) 65%, rgba(0, 32, 48, 0.97));
+  margin: 0 auto;
   border: 4px solid rgb(0, 31, 84);
   border-radius: 5px;
-  min-height: 178px;
+  background: var(--HB-blue-background);
+  padding: 1rem 1rem;
+  width: 100%;
   min-width: 330px;
+  min-height: 178px;
+  color: white;
+  font-size: 1em;
+  line-height: 150%;
 }
 
 .hmb-bluePanel:after {
-  content: '';
   position: absolute;
-  left: -3px;
   top: -3px;
   right: -3px;
   bottom: -3px;
+  left: -3px;
+  box-shadow: inset 0 0 2px 1px rgb(39, 186, 233), 0 0 3px 0 rgb(39, 186, 233);
   border: 1px solid rgb(39, 186, 233);
   border-radius: 5px;
-  box-shadow:
-    inset 0 0 2px 1px rgb(39, 186, 233),
-    0 0 3px 0 rgb(39, 186, 233);
   pointer-events: none;
+  content: '';
 }
 
 // ===== Modal
@@ -37,89 +34,92 @@
 }
 
 .hmb-modalTitle {
-  align-items: center;
   display: flex;
-  flex-direction: row;
   flex-shrink: 0;
-  pointer-events: auto;
+  flex-direction: row;
+  align-items: center;
+  box-shadow: 0px 8px 11px -8px #000000;
+  border-bottom: 1px solid #ffffff;
   width: 100%;
+  pointer-events: auto;
   color: var(--HMB-orange) !important;
   font-weight: bold;
-  text-shadow: 1px 1px 1px #000000;
-  border-bottom: 1px solid #ffffff;
-  box-shadow: 0px 8px 11px -8px #000000;
   line-height: 150%;
+  text-shadow: 1px 1px 1px #000000;
   text-transform: uppercase;
 }
+
 .hmb-titleContent {
   display: flex;
   flex-direction: column;
 }
+
 .hmb-closeBtn {
+  border: none;
   background-clip: border-box;
   background-color: rgba(0, 0, 0, 0);
   color: #ffffff;
-  border: none;
   font-size: 2em;
 }
+
 .hmb-closeBtn:hover {
   color: var(--HMB-orange);
-  // font-weight: bold;
-  text-shadow:
-    2px 2px 3px #004669,
-    2px 2px 5px #000000;
+  text-shadow: 2px 2px 3px #004669, 2px 2px 5px #000000;
 }
+
 .hmb-snapshots {
-  padding: 10px;
   display: flex;
   flex-direction: row;
   gap: 10px;
+  padding: 10px;
   overflow: auto;
+
   .snapshot {
-    width: 200px;
     cursor: pointer;
+    width: 200px;
   }
 }
 
 // ===== Collapsible Panel
 .hmb-collapsiblePanel {
-  color: #ffffff;
-  min-height: 50px !important;
   padding-top: 0px;
+  min-height: 50px !important;
+  color: #ffffff;
 
   button {
-    color: #ffffff;
-    background: none;
     border: none;
+    background: none;
     padding-top: 10px;
+    color: #ffffff;
   }
 
   .hmb-headerGrid {
     display: grid;
     grid-template-columns: 10fr 1fr;
-    width: 100%;
     border-bottom: 1px solid #ffffff;
+    width: 100%;
 
     .hmb-info {
       width: 100%;
     }
+
     .hmb-close {
       text-align: right;
     }
 
     .hmb-downArrow {
+      transition: rotate 0.25s ease-in-out;
       width: 1.5rem;
       height: 1.5rem;
-      transition: rotate 0.25s ease-in-out;
     }
   }
 
   .hmb-collapsibleContainer {
+    transition: height 0.25s ease-in-out;
     margin-top: 15px;
-    overflow-y: hidden;
     height: auto;
     height: calc-size(auto, size);
-    transition: height 0.25s ease-in-out;
+    overflow-y: hidden;
 
     &--close {
       @extend .hmb-collapsibleContainer;
@@ -134,9 +134,3 @@
     }
   }
 }
-
-// @media screen and (max-width: 1230px) {
-//   .imageDisplayContainer .portImageDisplay {
-//     height: auto;
-//   }
-// }
