--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,13 +4,13 @@
   justify-content: flex-start;
   align-items: center;
   gap: 8px;
+  width: 340px;
   height: 98px;
   line-height: 26px;
-  width: 340px;
 
   #hmb-logo {
-    width: 69px;
     transition: width 200ms;
+    width: 69px;
   }
 
   #hmb-text {
@@ -19,68 +19,68 @@
 }
 
 #hmb-headerCanvas {
-  border-bottom-color: rgb(39, 186, 233);
-  border-bottom-style: solid;
-  border-bottom-width: 2px;
   transition: opacity 5000ms ease-in;
   transition: height 150ms ease-in;
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
+  border-bottom-color: rgb(39, 186, 233);
 }
 
 .hmb-header {
-  height: 75px;
-  padding: 0;
-  position: absolute;
   display: flex;
-  flex-wrap: nowrap;
-  text-align: center;
+  position: absolute;
   top: 0;
+  flex-wrap: nowrap;
   z-index: 3;
-  margin: 0px;
-  width: 100%;
   transition: height 250ms;
+  margin: 0px;
+  padding: 0;
+  width: 100%;
+  height: 75px;
+  text-align: center;
 
   .hmb-info-icon {
-    background-color: #00000000;
-    color: #ffffff;
-    height: 20px;
-    line-height: 10px;
-    border-left: 2px solid #ffffff;
-    border-right: 2px solid #ffffff;
-    border-radius: 15px;
-    font-size: 1.25rem;
-    margin-top: 10px;
     position: relative;
+    margin-top: 10px;
+    border-right: 2px solid #ffffff;
+    border-left: 2px solid #ffffff;
+    border-radius: 15px;
+    background-color: #00000000;
+    height: 20px;
+    color: #ffffff;
+    font-size: 1.25rem;
+    line-height: 10px;
 
     .hmb-tooltiptext {
-      visibility: hidden;
-      width: 150px;
-      background-color: rgba(0, 92, 138);
-      color: #ffffff;
-      text-align: center;
-      padding: 7px;
-      border-radius: 6px;
+      /* Position the tooltip text - see examples below! */
+      position: absolute;
       // border: 1px solid rgb(39, 186, 233);
       // border-right: 2px solid rgb(39, 186, 233);
       top: -5px;
       right: 30px;
-      /* Position the tooltip text - see examples below! */
-      position: absolute;
+      visibility: hidden;
       z-index: 1;
+      border-radius: 6px;
+      background-color: rgba(0, 92, 138);
+      padding: 7px;
+      width: 150px;
+      color: #ffffff;
       font-size: 1rem;
+      text-align: center;
     }
   }
 
   .hmb-info-icon:hover {
-    color: var(--HMB-orange);
-    border-left: 2px solid var(--HMB-orange);
     border-right: 2px solid var(--HMB-orange);
+    border-left: 2px solid var(--HMB-orange);
+    color: var(--HMB-orange);
   }
 
   .hmb-info-icon:hover .hmb-tooltiptext {
     visibility: visible;
   }
+
   .hmb-info-icon .hmb-tooltiptext::after {
-    content: '';
     position: absolute;
     top: 40%;
     left: 100%;
@@ -88,22 +88,23 @@
     border-width: 7px;
     border-style: solid;
     border-color: transparent transparent transparent rgb(0, 92, 138);
+    content: '';
   }
 
   .hmb-headerNavigation {
-    z-index: 1;
-    width: 100%;
     display: flex;
+    z-index: 1;
     transition: height 250ms;
+    width: 100%;
 
     .hmb-headerButtonsRow {
       display: flex;
-      flex-wrap: nowrap;
-      text-align: center;
-      height: 96px;
-      width: 95%;
-      justify-content: space-around;
       flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-around;
+      width: 95%;
+      height: 96px;
+      text-align: center;
     }
 
     a {
@@ -118,12 +119,12 @@
 
       #hmb-menuBars {
         display: flex;
-        float: right;
-        transition: all 200ms linear;
-        justify-content: center;
-        cursor: pointer;
-        z-index: 10;
         top: 53px;
+        justify-content: center;
+        float: right;
+        z-index: 10;
+        transition: all 200ms linear;
+        cursor: pointer;
         font-size: 1.75em;
       }
 
@@ -138,36 +139,36 @@
       #hmb-dropDownContainer {
         position: absolute;
         right: 0px;
+        z-index: 4;
+        transition: height 200ms linear;
         width: 200px;
         overflow: hidden;
-        transition: height 200ms linear;
-        z-index: 4;
 
         #hmb-dropDown {
           position: absolute;
-          bottom: 7px;
-          text-align: right;
           right: 25px;
+          bottom: 7px;
           z-index: 10;
-          background: linear-gradient(-45deg, rgb(0, 32, 48), rgba(0, 92, 138, 0.95) 40%, rgba(0, 88, 133, 0.95) 65%, rgba(0, 32, 48, 0.95));
+          transition: top 750ms ease-in;
+          box-shadow: 0px 4px 8px #000000;
           border: 1px solid rgb(39, 186, 233);
           border-radius: 5px;
-          min-height: 178px;
-          transition: top 750ms ease-in;
-          width: 155px;
+          background: var(--HB-blue-background);
           padding: 0 10px 0 0;
-          box-shadow: 0px 4px 8px #000000;
+          width: 155px;
+          min-height: 178px;
+          text-align: right;
 
           .hmb-linkContainer {
             .hmb-menuBarNavigation {
-              font-size: 1em;
-              text-decoration: none;
-              text-align: right;
-              color: #ffffff;
-              letter-spacing: 2px;
               cursor: pointer;
+              color: #ffffff;
               font-weight: bold;
+              font-size: 1em;
               line-height: 150%;
+              letter-spacing: 2px;
+              text-align: right;
+              text-decoration: none;
             }
 
             .hmb-menuBarNavigation:hover {
@@ -178,13 +179,15 @@
       }
     }
   }
+
   .hmb-headerNavigation .hmb-headerButtonsRow a:hover {
-    margin-top: -7px;
-    font-size: 1.45rem;
     transition:
       margin-top 225ms ease-in,
       font-size 225ms ease-in;
+    margin-top: -7px;
+    font-size: 1.45rem;
   }
+
   canvas {
     position: absolute !important;
   }
@@ -197,45 +200,45 @@
 // $bs-gutter-x: 1.5rem;
 
 .hmb-headerButtonContainer {
+  display: flex;
+  position: relative;
+  bottom: 0;
   // cursor: pointer;
   flex: 1;
-  background-size: cover;
-  position: relative;
-  height: 96%;
-  bottom: 0;
   z-index: 1;
-  text-align: center;
-  max-height: 96px;
-  display: flex;
-  padding-left: calc(var(--bs-gutter-x) * 0.25);
+  background-size: cover;
   padding-right: calc(var(--bs-gutter-x) * 0.25);
+  padding-left: calc(var(--bs-gutter-x) * 0.25);
+  height: 96%;
+  max-height: 96px;
+  text-align: center;
 }
 
 .navLink {
-  background: none;
-  color: #ffffff;
-  font-size: 1.25em;
-  font-weight: 200;
-  letter-spacing: 2px;
-  line-height: 96px;
-  transition: line-height 200ms linear;
-  padding: 0 4px;
-  text-decoration: none;
+  display: flex;
   position: relative;
+  justify-content: center;
   z-index: 1;
+  transition: line-height 200ms linear;
+  margin: 0px;
+  background: none;
+  padding: 0 4px;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  margin: 0px;
+  color: #ffffff;
+  font-weight: 200;
+  font-size: 1.25em;
+  line-height: 96px;
+  letter-spacing: 2px;
+  text-decoration: none;
 }
 
 .navLinkActive {
   @extend .navLink;
-  color: var(--HMB-orange);
-  text-shadow: 0 1px 5px #000000;
   margin-top: -7px;
+  color: var(--HMB-orange);
   font-size: 1.45rem;
+  text-shadow: 0 1px 5px #000000;
 }
 
 .navLinkIcon {
