Resume collapsiblePanel updates

--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -39,6 +39,11 @@
 }
 
 #hmb-resume {
+
+  .experienceContainer {
+    gap: 0px;
+  }
+
   .hmb-expRow {
     display: flex;
     flex-direction: row;
