--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -83,14 +83,16 @@
 // ===== Collapsible Panel
 .hmb-collapsiblePanel {
   position: relative;
-  margin: 0 auto;
-  padding: 1rem;
+  // margin: 0 auto;
+  // padding: 1rem;
   padding-top: 0px;
   width: 100%;
   min-height: 50px !important;
   color: #ffffff;
   font-size: 1em;
   line-height: 150%;
+  border: 1px solid rgba(255, 255, 255, 0.34);
+  border-bottom: none;
 
   button {
     border: none;
@@ -122,7 +124,7 @@
 
   .hmb-collapsibleContainer {
     transition: height 0.25s ease-in-out;
-    margin-top: 15px;
+    // margin-top: 15px;
     height: auto;
     height: calc-size(auto, size);
     overflow-y: hidden;
