--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -97,8 +97,10 @@
   button {
     border: none;
     background: none;
-    padding-top: 10px;
+    padding-top: 15px;
     color: #ffffff;
+    width: 100%;
+    padding-right: 0px;
   }
 
   .hmb-headerGrid {
@@ -106,6 +108,7 @@
     grid-template-columns: 10fr 1fr;
     border-bottom: 1px solid #ffffff;
     width: 100%;
+    padding-bottom: 10px;
 
     .hmb-info {
       width: 100%;
@@ -113,6 +116,7 @@
 
     .hmb-close {
       text-align: right;
+      padding-right: 10px;
     }
 
     .hmb-downArrow {
@@ -140,5 +144,11 @@
       flex-flow: column;
       gap: 20px;
     }
+  }
+}
+
+.hmb-collapsiblePanel:hover {
+  button {
+    background: rgb(27 27 27 / 25%) !important;
   }
 }
