Connect and Space updates

--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -157,6 +157,14 @@
 }
 
 .hmb-connectPage {
+  .hmb-connect {
+    font-size: 1.1em;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+  }
+
   .hmb-container {
     display: flex;
     justify-content: center;
