--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -38,6 +38,20 @@
   width: 100%;
   height: 75px;
   text-align: center;
+  justify-content: flex-start;
+  padding: 0px 0.5rem;
+
+  .header-container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 1.5rem;
+    margin: 0px;
+    box-sizing: border-box;
+    text-align: center;
+  }
 
   .hmb-info-icon {
     position: relative;
@@ -105,6 +119,13 @@
       width: 95%;
       height: 96px;
       text-align: center;
+    }
+
+    .HMB-column {
+      display: flex;
+      flex-grow: 1;
+      flex-shrink: 0;
+      flex-basis: 0px;
     }
 
     a {
